--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-deep_translator==1.11.4
-matplotlib==3.9.2
-numpy==2.1.2
-pandas==2.2.3
-seaborn==0.13.2
+deep_translator~=1.11.4
+matplotlib~=3.9.2
+numpy~=2.1.2
+pandas~=2.2.3
+seaborn~=0.13.2
