--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+Babel~=2.16.0
 deep_translator~=1.11.4
 matplotlib~=3.9.2
 numpy~=2.1.2
-openpyxl~=3.1.5
 pandas~=2.2.3
 seaborn~=0.13.2
+streamlit~=1.39.0
 wordcloud~=1.9.3
